cmake_minimum_required(VERSION 2.8.12)

project(dart-tutorials)

add_subdirectory(transferNet)
add_subdirectory(runRect3D)
add_subdirectory(trainRect3DC1)
add_subdirectory(trainRect3DC2)
add_subdirectory(trainRect3DC3)
add_subdirectory(trainRect3DR1)
add_subdirectory(trainRect3DR2)
add_subdirectory(trainRect3DR3)
add_subdirectory(Metrics)
add_subdirectory(rectDataGen)
add_subdirectory(run5gon3D)
add_subdirectory(pentaDataGen)
add_subdirectory(runRect2D)

